--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "ipykernel",
     "jupyterlab",
     "coinmetrics-api-client>=2025.5.6.13",
+    "scipy>=1.15.3",
 ]
 
 [dependency-groups]
